Fix align

--- a/src/styles/prices.module.scss
+++ b/src/styles/prices.module.scss
@@ -6,6 +6,7 @@
 
     .title{
         font: 700 2.8em SpaceRanger;
+        text-align: center;
         letter-spacing: 3px;
         color: var(--red);
     }
